# blockmine-core

./: .gitignore  LIVE_CONFIG_NOTES.md  MINING_CURVE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md
docs/: README.md  architecture.md  miner-client.md  protocol.md  roadmap-v1-v2.md  security-notes.md  tokenomics.md  vast-ai.md
miner-client/: Cargo.toml  build.rs
miner-client/scripts/: wsl-build-windows.sh  wsl-cargo.sh  wsl-miner.sh
miner-client/src/: cli.rs  config.rs  hashing.rs  lib.rs  main.rs  miner_loop.rs  mining_service.rs  rig_probe.rs  rpc.rs  session_wallet.rs  submitter.rs  ui.rs  vast_wallet.rs  wallet.rs  wallet_store.rs
miner-client/src/commands/: benchmark.rs  desktop.rs  init_protocol.rs  list_devices.rs  mine.rs  mod.rs  protocol_state.rs  register.rs  submit_test.rs  wallet_stats.rs
miner-client/src/engine/: cpu.rs  gpu.rs  mod.rs
onchain/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
onchain/programs/blockmine/: Cargo.toml
onchain/programs/blockmine/src/: constants.rs  errors.rs  events.rs  lib.rs
onchain/programs/blockmine/src/instructions/: admin.rs  initialize_protocol.rs  mod.rs  register_miner.rs  rotate_stale_block.rs  session_mining.rs  submit_solution.rs  update_nickname.rs
onchain/programs/blockmine/src/math/: difficulty.rs  mod.rs  rewards.rs
onchain/programs/blockmine/src/state/: block_history.rs  current_block.rs  miner_stats.rs  mining_session.rs  mod.rs  protocol_config.rs
onchain/scripts/: create-token-metadata.cjs  derive-launch-addresses.cjs  devnet-bootstrap.mjs  update-difficulty-devnet.mjs  update-runtime-devnet.mjs  update-treasury-devnet.mjs  wsl-anchor.sh  (+3 more)
packaging/: README.md
scripts/: README-miner-exe.txt  bootstrap.ps1  build-anchor.ps1  build-miner-exe.ps1  common.ps1  set-exe-icon.ps1  test-anchor.ps1
(+16 files in other folders)
