[package]
name = "blockmine-miner"
version = "0.1.0"
edition = "2021"

[features]
default = []
opencl = ["dep:ocl"]

[patch.crates-io]
solana_rbpf = { path = "vendor/solana_rbpf-0.8.0" }

[dependencies]
anchor-lang = "=0.30.1"
anyhow = "1.0.97"
bip39 = { version = "2.1.0", features = ["rand"] }
blockmine-program = { path = "../onchain/programs/blockmine", package = "blockmine-program", features = ["no-entrypoint"] }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
dirs = "6.0.0"
eframe = { version = "=0.27.2", default-features = true }
hex = "0.4.3"
home = "=0.5.9"
image = { version = "=0.25.5", default-features = false, features = ["gif", "png"] }
ocl = { version = "0.19.7", optional = true }
rand = "0.8.5"
rfd = "=0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
solana-client = "=1.18.17"
solana-sdk = "=1.18.17"
spl-associated-token-account = "=3.0.4"
spl-token = "=4.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
