[package]
name = "blockmine-program"
version = "0.1.0"
description = "Bitcoin-like mining protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockmine_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

